--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.5",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
