--- a/package.json
+++ b/package.json
@@ -13,30 +13,37 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.14",
     "@tanstack/react-query": "^5.21.2",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "firebase": "^10.8.0",
     "flowbite-react": "^0.7.2",
+    "heroicons": "^2.1.1",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.3",
     "moment": "^2.30.1",
-    "primereact": "^10.3.3",
+    "primereact": "^10.6.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-id-swiper": "^4.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.3",
-    "react-slick": "^0.30.1",
+    "react-simple-image-slider": "^2.4.1",
+    "react-slick": "^0.30.2",
+    "react-slideshow-image": "^4.3.1",
     "react-tabs": "^6.0.2",
     "react-type-animation": "^3.2.0",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.5",
